增加python编码规范

--- a/docs/note/python/笔记.md
+++ b/docs/note/python/笔记.md
@@ -38,4 +38,21 @@ from module import *
 此时被导入模块若定义了__all__属性，则只有__all__内指定的属性、方法、类可被导入。
 若没定义，则导入模块内的所有公有属性，方法和类 。
 
+## yapf
+利用yapf将python代码编写分割弄成pep8规范
+`pip install yapf`
+`yapf -r -i <file_name>`
+
+对于github的repo可以安装pre_commit，这样每次commit的时候会进行检查
+```buildoutcfg
+pip install pre_commit
+ 
+pre-commit install
+ 
+# 如果出现pre-commit安装出现SSL错误
+请执行
+git config --global http.sslVerify false
+```
+
+
 
